[package]
name = "line_notify"
version = "0.1.0"
author = ["Yuta Hirata"]
definition = "A simple line notify client"
license = "MIT"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11.24", features = ["multipart"] }
tokio = {version = "1.29.1", features = ["full"] }
