[package]
name = "line_notify"
version = "0.1.1"
author = ["Yuta Hirata"]
description = "A simple line notify client"
repository = "https://github.com/MorrisFreeman/line_notify"
license = "MIT"
edition = "2021"

[dependencies]
reqwest = { version = "0.11.24", features = ["multipart"] }
tokio = {version = "1.29.1", features = ["full"] }
